--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "class-variance-authority": "^0.7.1",
     "dompurify": "^3.2.3",
     "framer-motion": "^11.15.0",
@@ -22,7 +25,8 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
