--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
@@ -20,6 +22,7 @@
     "@react-three/fiber": "^8.17.10",
     "class-variance-authority": "^0.7.1",
     "dompurify": "^3.2.3",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
